@@ -1,3 +1,12 @@
+2002-04-28  Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>
+
+	* include/ext/stl_hashtable.h: Import __iterator_category
+
+2002-04-28  Paolo Carlini  <pcarlini@unitus.it>
+            Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>
+
+	* testsuite/ext/hash_set.cc: New testfile.
+
 2002-04-27  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* config/os/solaris/solaris2.5/bits/os_defines.h: Remove
